more perm memory