@@ -708,7 +708,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>2.10</version>
                         <configuration>
-                            <argLine>-Xms128m -Xmx512m</argLine>
+                            <argLine>-Xms128m -Xmx512m -XX:MaxPermSize=256m -XX:+CMSClassUnloadingEnabled</argLine>
                         </configuration>
                         <executions>
                             <execution>
